# developer

./: .gitignore  .pdm.toml  .pylintrc  Dockerfile  README.md  api.http  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh  start.sh
src/__seedwork/application/: dto.py  use_cases.py
src/__seedwork/domain/: entities.py  exceptions.py  repository.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_int_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_unit_use_case.py
src/__seedwork/tests/unit/domain/: test_entities.py  test_unit_repository.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_int_entities.py
src/category/tests/unit/application/: test_unit_dto.py  test_unit_usecases.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_repository.py  test_unit_validators.py
src/category/tests/unit/infra/: test_unit_repositories.py
src/core/__seedwork/application/: dto.py
src/core/__seedwork/domain/: entities.py  exceptions.py  repository.py  validators.py  value_objects.py
src/core/__seedwork/tests/integration/domain/: test_int_validators.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  repositories.py  validators.py
src/core/category/infra/django/: api.py  apps.py  models.py  urls.py
src/core/category/infra/django_app/: api.py  apps.py  mappers.py  models.py  repositories.py  urls.py
src/core/category/infra/in_memory/: repositories.py
src/django_app/: container.py  settings.py  urls.py
uml/: class-diagram.wsd
uml/usecases/: category.usecase.wsd
(+19 files in other folders)
