[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.2",
    "pytest>=7.3.1",
]
[tool.pdm.scripts]
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 70"
test_html = "pdm run test_cov --cov-report html:./__coverage"

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wilfoz", email = "wil_foz@yahoo.com.br"},
]
dependencies = [
    "djangorestframework>=3.14.0",
    "pytest-cov>=4.1.0",
]
requires-python = ">=3.10.2"
license = {text = "MIT"}
